fixing button alignment

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -1709,3 +1709,4 @@ header.masthead .container {
 }
 #menu-community li{line-height: 26px;}
 .resource-item .btn-group a{min-width:85px;}
+.resource-item .btn-group a.btn{text-align: left !important}
